<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".View.Login.SettingLoginFragment">

    <TextView
        android:id="@+id/fragmentSettingLogin_tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_medium"
        android:text="@string/setting_login"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/font_size_title"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fragmentSettingLogin_tlLinkApi"
        style="@style/TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_medium"
        app:layout_constraintTop_toBottomOf="@+id/fragmentSettingLogin_tvTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fragmentSettingLogin_teLinkApi"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableStart="@drawable/ic_baseline_insert_link_24"
            android:drawablePadding="@dimen/padding_small"
            android:hint="@string/link_api"
            android:inputType="textWebEditText"
            android:textAllCaps="true">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fragmentSettingLogin_tlPrivateKey"
        style="@style/TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_medium"
        app:layout_constraintTop_toBottomOf="@+id/fragmentSettingLogin_tlLinkApi">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fragmentSettingLogin_tePrivateKey"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableStart="@drawable/ic_baseline_vpn_key_24"
            android:drawablePadding="@dimen/padding_small"
            android:hint="@string/private_key"
            android:inputType="text"
            android:textAllCaps="true">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>


    <androidx.cardview.widget.CardView
        android:id="@+id/fragmentSettingLogin_cvSave"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="@dimen/margin_medium"
        android:elevation="@dimen/elevation_card"
        android:foreground="?attr/selectableItemBackground"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragmentSettingLogin_tlPrivateKey"
        tools:layout_editor_absoluteX="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/button_save"
            android:textColor="@color/colorSecondary"
            android:textSize="@dimen/font_size_normal"
            android:textStyle="bold"/>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>