<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.Login.ForgotPasswordFragment">

    <TextView
        android:id="@+id/fragmentForgotPassword_tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_medium"
        android:text="@string/forgot_password_title"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/font_size_title"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fragmentForgotPassword_tlUser"
        style="@style/TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_medium"
        app:layout_constraintTop_toBottomOf="@+id/fragmentForgotPassword_tvTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fragmentForgotPassword_teUser"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableStart="@drawable/ic_baseline_account_circle_24"
            android:drawablePadding="@dimen/padding_small"
            android:hint="@string/user_name"
            android:inputType="textPersonName"
            android:textAllCaps="true">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fragmentForgotPassword_tlEmail"
        style="@style/TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_medium"
        app:layout_constraintTop_toBottomOf="@+id/fragmentForgotPassword_tlUser">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fragmentForgotPassword_teEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableStart="@drawable/ic_baseline_mail_outline_24"
            android:drawablePadding="@dimen/padding_small"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"
            android:textAllCaps="true">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>


    <androidx.cardview.widget.CardView
        android:id="@+id/fragmentForgotPassword_cvCommit"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="@dimen/margin_medium"
        android:elevation="@dimen/elevation_card"
        android:foreground="?attr/selectableItemBackground"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragmentForgotPassword_tlEmail"
        tools:layout_editor_absoluteX="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/button_commit"
            android:textColor="@color/colorSecondary"
            android:textSize="@dimen/font_size_normal"
            android:textStyle="bold"/>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>